<resources>
    <string name="app_name">RittoApp</string>
    <string name="nombre_del_perfil">Nombre del perfil</string>
    <string name="pin_4_d_gitos">PIN (4 dígitos)</string>
    <string name="guardar_perfil">Guardar Perfil</string>
    <string name="alcanc_a">Alcancía</string>
    <string name="icono">Icono</string>
    <string name="total_0_00">Total: $0.00</string>
    <string name="ingresar">Ingresar</string>
    <string name="nombre_del_perfil_inicio_perfil">Nombre del perfil</string>
    <string name="ingresa_tu_pin">Ingresa tu PIN</string>
    <string name="selecciona_tu_perfil">Selecciona tu perfil</string>
    <string name="a_n_no_tienes_perfiles_registrados">Aún no tienes perfiles registrados.</string>
    <string name="crear_nuevo_perfil">Crear nuevo perfil</string>
    <string name="flecha_a_la_izquierda">←</string>
    <string name="flecha_a_la_derecha">→</string>
    <string name="nombre_de_la_alcanc_a">Nombre de la alcancía</string>
    <string name="cantidad_inicial">Cantidad inicial</string>
    <string name="est_sellada">¿Está sellada?</string>
    <string name="nombre_de_la_meta">Nombre de la meta</string>
    <string name="monto_objetivo">Monto objetivo</string>
    <string name="total">Total</string>
    <string name="retirar_dinero">Retirar dinero</string>
    <string name="agregar_dinero">Agregar dinero</string>
    <string name="cambiar_nombre">Cambiar nombre</string>
    <string name="cambiar_pin">Cambiar PIN</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="recordatorio_diario_para_ahorrar">Recordatorio diario para ahorrar</string>
    <string name="elegir_hora_recordatorio">Elegir hora recordatorio</string>
    <string name="hora_no_establecida">Hora: No establecida</string>
    <string name="cambiar_avatar_de_alcanc_a">Cambiar avatar de alcancía</string>
    <string name="icono_de_alcanc_a">Icono de alcancía</string>
    <string name="cambiar_nombre_de_alcanc_a">Cambiar nombre de alcancía</string>
    <string name="vaciar_alcanc_a">Vaciar alcancía</string>
    <string name="borrar_alcanc_a">Borrar alcancía</string>
    <string name="agregar_alcanc_a">Agregar Alcancía</string>
    <string name="historial_de_movimientos">Historial de Movimientos</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>
    <string name="hola_bienvenido_a_tu_resumen">¡Hola! Bienvenido a tu resumen</string>
    <string name="total_global_ahorrado">Total global ahorrado:</string>
    <string name="cada_moneda_cuenta">¡Cada moneda cuenta! 💰</string>
    <string name="agregar_meta">Agregar Meta</string>
    <string name="icono_alcanc_a">Icono Alcancía</string>
    <string name="nombre">Nombre</string>
    <string name="_0_00">$0.00</string>
    <string name="imagen_de_denominaci_n">Imagen de denominación</string>
    <string name="_1_00">$1.00</string>
    <string name="menos">−</string>
    <string name="_0">0</string>
    <string name="mas">+</string>
    <string name="iconospinner">icono</string>
    <string name="meta">Meta</string>
    <string name="la_meta_es_100_00">La meta es: $100.00</string>
    <string name="te_hacen_falta_45_00">Te hacen falta: $45.00</string>
    <string name="eliminar_meta">Eliminar meta</string>
    <string name="_2025_05_28">2025-05-28</string>
    <string name="dep_sito">Depósito</string>
    <string name="_12_00">$12.00</string>
    <string name="metas">METAS</string>
    <string name="ahorros">AHORROS</string>
    <string name="historial">HISTORIAL</string>
    <string name="ajustes">AJUSTES</string>
    <string name="inicio">Inicio</string>
    <string name="alcanc_as">Alcancías</string>
    <string name="metashome">Metas</string>
    <string name="ajusteshome">Ajustes</string>
    <string name="la_meta_es_2f">La meta es: $%.2f</string>
    <string name="meta_alcanzada">✅ ¡Meta alcanzada!</string>
    <string name="te_hacen_falta_2f">Te hacen falta: $%.2f</string>
    <string name="metas_de">"Metas de: "</string>
    <string name="saldo">" (Saldo: $"</string>
    <string name="nuevo_icono">Nuevo Icono</string>
    <string name="saldo_actual">Saldo actual: $</string>
    <string name="la_meta_es_2ffragment">La meta es: $%.2f</string>
    <string name="cancelar">Cancelar</string>
    <string name="est_s_seguro_de_que_quieres_eliminar_esta_meta">¿Estás seguro de que quieres eliminar esta meta?</string>
    <string name="s">Sí</string>
    <string name="eliminar_metas">¿Eliminar meta?</string>
    <string name="nueva_meta">Nueva Meta</string>
    <string name="crear">Crear</string>
    <string name="campos_incompletos">Campos incompletos</string>
    <string name="esta_alcanc_a_est_sellada_y_no_permite_retiros">Esta alcancía está sellada y no permite retiros</string>
    <string name="total_2f">Total: $%.2f</string>
    <string name="d_de_2f">%d de $%.2f\n</string>
    <string name="no_hay_monedas_ni_billetes_registrados">No hay monedas ni billetes registrados.</string>
    <string name="desglose_total">Desglose Total</string>
    <string name="cerrar">Cerrar</string>
    <string name="total_desglosado_2f">\nTotal desglosado: $%.2f</string>
    <string name="error_al_cargar_datos">Error al cargar datos</string>
    <string name="ingresa_un_nombre">Ingresa un nombre</string>
    <string name="alcanc_a_actualizada">Alcancía actualizada</string>
    <string name="la_alcanc_a_ya_est_vac_a">La alcancía ya está vacía</string>
    <string name="retiro">retiro</string>
    <string name="alcanc_a_vaciada_correctamente">Alcancía vaciada correctamente</string>
    <string name="eliminar_alcanc_a">¿Eliminar alcancía?</string>
    <string name="esta_acci_n_no_se_puede_deshacer">Esta acción no se puede deshacer.</string>
    <string name="si">Sí</string>
    <string name="verifica_los_datos_ingresados_pin_m_nimo_4_d_gitos">Verifica los datos ingresados (PIN mínimo 4 dígitos)</string>
    <string name="perfil_actualizado">Perfil actualizado</string>
    <string name="recordatorio_diario_desactivado">Recordatorio diario desactivado</string>
    <string name="no_olvides_establecer_una_hora_para_el_recordatorio">No olvides establecer una hora para el recordatorio</string>
    <string name="noti_recordatorio_activada">noti_recordatorio_activada</string>
    <string name="hora">"Hora: "</string>
    <string name="noti_recordatorio_hora">noti_recordatorio_hora</string>
    <string name="no_seleccionada">no seleccionada</string>
    <string name="debes_seleccionar_un_perfil_primero">Debes seleccionar un perfil primero</string>
    <string name="nombre_requerido">Nombre requerido</string>
    <string name="m_ximo_2_decimales">Máximo 2 decimales</string>
    <string name="el_monto_no_puede_ser_negativo">El monto no puede ser negativo</string>
    <string name="formato_inv_lido_ej_5_00">Formato inválido (ej: 5.00)</string>
    <string name="no_se_pudo_copiar_la_imagen">No se pudo copiar la imagen</string>
    <string name="completa_todos_los_campos_y_usa_un_pin_de_4_d_gitos">Completa todos los campos y usa un PIN de 4 dígitos</string>
    <string name="completa_todos_los_campos_y_usa_un_pin_de_4_d_gitoss">Completa todos los campos y usa un PIN de 4 dígitos</string>
    <string name="dep_sito_guardado">✅ Depósito guardado</string>
    <string name="error_aseg_rate_de_ingresar_una_cantidad_v_lida">⚠️ Error: asegúrate de ingresar una cantidad válida</string>
    <string name="totals_2f">Total: $%.2f</string>
    <string name="no_hay_detalles_registrados_para_este_movimiento">No hay detalles registrados para este movimiento</string>
    <string name="pin_incorrecto">PIN incorrecto</string>
    <string name="total_global_ahorradoo">Total global ahorrado: $</string>
    <string name="ahorraste_hoy_no_olvides_registrarlo_en_tu_alcanc_a">¿Ahorraste hoy? ¡No olvides registrarlo en tu alcancía!</string>
    <string name="permiso_de_notificaciones_no_concedido">Permiso de notificaciones no concedido</string>
    <string name="esta_alcanc_a_est_sellada_y_no_permite_retiross">Esta alcancía está sellada y no permite retiros.</string>
    <string name="ingresa_una_cantidad_v_lida_para_retirar">Ingresa una cantidad válida para retirar</string>
    <string name="no_hay_suficiente_dinero_en_la_alcanc_a">No hay suficiente dinero en la alcancía</string>
    <string name="no_tienes_suficientes_de">No tienes suficientes de $</string>
    <string name="retiro_registrado">Retiro registrado</string>
    <string name="totaal_2f">Total: $%.2f</string>
    <string name="permiso_de_notificaciones_concedido">Permiso de notificaciones concedido</string>
    <string name="sin_permiso_para_notificaciones">Sin permiso para notificaciones</string>
    <string name="todos">Todos</string>
    <string name="deposito">Deposito</string>
    <string name="depositoss">Deposito</string>
    <string name="retiros">Retiro</string>
    <string name="desglose_de_movimiento">Desglose de Movimiento</string>
    <string name="cerrarr">Cerrar</string>
    <string-array name="filtro_tipos">
        <item>Todos</item>
        <item>Deposito</item>
        <item>Retiro</item>
    </string-array>

</resources>