<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_dialogo_redondo"
    android:padding="12dp"
    android:layout_marginBottom="8dp">

    <TextView android:id="@+id/txtNombreMeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meta"
        android:textStyle="bold"/>

    <TextView android:id="@+id/txtMontoMeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/la_meta_es_100_00"/>

    <TextView android:id="@+id/txtMontoFaltante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/te_hacen_falta_45_00"/>
    <ImageButton
        android:id="@+id/btnEliminarMeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_delete"
        android:contentDescription="@string/eliminar_meta"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_gravity="end"/>

</LinearLayout>
