<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:gravity="center_vertical"
    android:background="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtFechaMovimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2025_05_28"
            android:textSize="14sp"
            android:textColor="?android:textColorPrimary" />

        <TextView
            android:id="@+id/txtTipoMovimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dep_sito"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="?android:textColorPrimary" />

        <TextView
            android:id="@+id/txtMontoMovimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_12_00"
            android:textSize="14sp"
            android:textColor="?android:textColorSecondary" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btnVerDesglose"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Ver desglose"
        android:src="@android:drawable/ic_menu_info_details"
        app:tint="?android:textColorPrimary" />
</LinearLayout>
